--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@
           - testimonials
         -->
 
-        <section class="testimonials">
+      <section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
 
-          <ul class="testimonials-list has-scrollbar">
+          <class class="testimonials-list has-scrollbar">
 
             <li class="testimonials-item">
               <div class="content-card" data-testimonials-item>
@@ -302,7 +302,7 @@
         <!--
           - testimonials modal
         -->
-l
+
         <div class="modal-container" data-modal-container>
 
           <div class="overlay" data-overlay></div>
@@ -340,7 +340,7 @@ l
 
         </div>
 
-
+      </section>
         <!--
           - clients
         -->
