--- a/index.html
+++ b/index.html
@@ -477,9 +477,11 @@
               <span>May 2024 — Aug. 2024</span>
 
               <p class="timeline-text">
-                - Developed automated test scripts for GM’s infotainment system, improving test coverage and efficiency for future builds <br>                    
-                - Collaborated with the Dev QA team to integrate automated testing into the software development, ensuring early detection <br>
-                - Utilized expertise in Python and C++ to create robust and maintainable test scripts, promoting long-term efficiency
+                <ul class="courses">
+                  <li>Developed automated test scripts for GM’s infotainment system, improving test coverage and efficiency for future builds</li>
+                  <li>Collaborated with the Dev QA team to integrate automated testing into the software development, ensuring early detection</li>
+                  <li>Utilized expertise in Python and C++ to create robust and maintainable test scripts, promoting long-term efficiency</li>
+                </ul>                   
               </p>
 
             </li>
@@ -491,9 +493,11 @@
               <span>2023 — Present</span>
 
               <p class="timeline-text">
-                - Private Tutor for EECS 280, EECS 203, and EECS 183 courses, specializing in data structures, programming, discrete mathematics, and introductory programming concepts. <br>
-                - Facilitated learning for individual students to enhance their understanding and proficiency in complex technical subjects. <br>
-                - Customized tutoring sessions to meet the specific needs and learning styles of each student, fostering a more effective learning experience.
+                <ul class="courses">
+                  <li>Private Tutor for EECS 280, EECS 203, and EECS 183 courses, specializing in data structures, programming, discrete mathematics, and introductory programming concepts.</li>
+                  <li>Facilitated learning for individual students to enhance their understanding and proficiency in complex technical subjects.</li>
+                  <li>Customized tutoring sessions to meet the specific needs and learning styles of each student, fostering a more effective learning experience.</li>
+                </ul>
               </p>
 
             </li>
@@ -505,9 +509,11 @@
               <span>2023 — 2024</span>
 
               <p class="timeline-text">
-                - Conducted research on biologically inspired robotics and dynamical systems as a member of the BIRDS team. <br>
-                - Contributed to the development of innovative robotics technologies and systems through hands-on experimentation and testing. <br>
-                - Documented research findings and procedures on the BIRDS robotics wiki, ensuring accurate and thorough record-keeping
+                <ul class="courses">
+                  <li>Conducted research on biologically inspired robotics and dynamical systems as a member of the BIRDS team.</li>
+                  <li>Contributed to the development of innovative robotics technologies and systems through hands-on experimentation and testing.</li>
+                  <li>Documented research findings and procedures on the BIRDS robotics wiki, ensuring accurate and thorough record-keeping</li>
+                </ul>
               </p>
 
             </li>
@@ -519,8 +525,10 @@
               <span>2022 — Present</span>
 
               <p class="timeline-text">
-                -Develop efficient and inclusive HR hiring policy for talent acquisition teams future use <br>
-                -Managed data and records for HR partners by utilizing Excel to track and organize information ensuring quick and accurate retrieval for future reference
+                <ul class="courses">
+                  <li>Develop efficient and inclusive HR hiring policy for talent acquisition teams future use</li>
+                  <li>Managed data and records for HR partners by utilizing Excel to track and organize information ensuring quick and accurate retrieval for future reference</li>
+                </ul>
               </p>
 
             </li>
@@ -532,9 +540,11 @@
               <span>Jul. 2022 — Dec. 2022</span>
 
               <p class="timeline-text">
-                - Clearly articulated University Career Center services to 15 constituents via email, phone and in person per day <br>
-                - Addressed employers’ questions for career fairs and scheduled student appointments with career coaches. <br>
-                - Evaluated job posting requests from employers for legitimacy 
+                <ul class="courses">
+                  <li>Clearly articulated University Career Center services to 15 constituents via email, phone and in person per day</li>
+                  <li>Addressed employers’ questions for career fairs and scheduled student appointments with career coaches.</li>
+                  <li>Evaluated job posting requests from employers for legitimacy </li>
+                </ul>
               </p>
 
             </li>
@@ -563,14 +573,18 @@
               <span>2022 — Present</span>
               <h5 class="h5 timeline-item-sub-title"> Internal Vice President (Mar 25' - Present) </h5>
               <p class="timeline-text">
-                - Facilitated leadership development and team cohesion for 50+ members through organizing and leading annual leadership retreats and bonding events <br>
-                - Enhanced internal communication and collaboration within the Society of Women Engineers by designing and implementing strategic team-building initiatives. <br>
+                <ul class="courses">
+                  <li>Facilitated leadership development and team cohesion for 50+ members through organizing and leading annual leadership retreats and bonding events </li>
+                  <li>Enhanced internal communication and collaboration within the Society of Women Engineers by designing and implementing strategic team-building initiatives.</li>
+                </ul>
               </p>
               <h5 class="h5 timeline-item-sub-title"> CAR Publicity and Professional Development Officer (May 24' - Mar. 25') </h5>
               <p class="timeline-text">
-                  - Help lead a successful Professional Development Day for UMICH engineering students <br>
-                  - Organized Corporate Information Sessions, creating strong student-industry connections and increasing internship/job opportunities <br>
-                  - Drove women's empowerment initiatives, facilitating workshops and networking events to support female engineering students in industry pursuits
+                <ul class="courses">
+                  <li>Help lead a successful Professional Development Day for UMICH engineering students</li>
+                  <li>Organized Corporate Information Sessions, creating strong student-industry connections and increasing internship/job opportunities</li>
+                  <li>Drove women's empowerment initiatives, facilitating workshops and networking events to support female engineering students in industry pursuits</li>
+                </ul>
               </p>
 
             </li>
@@ -582,14 +596,18 @@
               <span>2023 — Present</span>
               <h5 class="h5 timeline-item-sub-title"> Developement Director (Dec. 23' - Present) </h5>
               <p class="timeline-text">
-                - Lead the strategic planning and execution of the main financial website project, ensuring it aligns with the company's goals and client requirements. <br>
-                - Provide guidance and resources for skill development, certification, and professional advancement, fostering a culture of continuous learning and development within the organization.<br>
-                - Foster a collaborative and innovative environment, encouraging knowledge sharing, best practice adoption, and cross-team collaboration to drive overall company success.<br>
+                <ul class="courses">
+                  <li>Lead the strategic planning and execution of the main financial website project, ensuring it aligns with the company's goals and client requirements.</li>
+                  <li>Provide guidance and resources for skill development, certification, and professional advancement, fostering a culture of continuous learning and development within the organization.</li>
+                  <li>Foster a collaborative and innovative environment, encouraging knowledge sharing, best practice adoption, and cross-team collaboration to drive overall company success.</li>
+                </ul>
               </p>
               <h5 class="h5 timeline-item-sub-title"> Project Manager (Jan. 25' - Present) </h5>
               <p class="timeline-text">
-                - Directed a 4-member web development team (2 UI/UX, 2 front-end) to deliver projects on time. <br>
-                - Managed web project scope and resources, coordinating UI/UX and front-end development. <br>
+                <ul class="courses">
+                  <li>Directed a 4-member web development team (2 UI/UX, 2 front-end) to deliver projects on time.</li>
+                  <li>Managed web project scope and resources, coordinating UI/UX and front-end development.</li>
+                </ul>
               </p>
             </li>
 
@@ -601,10 +619,12 @@
               
               <h5 class="h5 timeline-item-sub-title"> Navigation Autonomous Software Engineer (Aug. 22' - Present) </h5>
               <p class="timeline-text">
-                - Rigorously test algorithms by creating different simulation environments with Blender software <br>
-                - Implemented new rover state using A-Star algorithm to autonomously locate water bottles, optimizing search path with spiral plotting <br>
-                - Develop a 2D vector path planning algorithm for the rover to traverse through the gate properly which received 96/100 at the University Robotics Competition <br>
-                - Author technical reports for wiki documentation for the team’s reference and future competitions
+                <ul class="courses">
+                  <li>Rigorously test algorithms by creating different simulation environments with Blender software</li>
+                  <li>Implemented new rover state using A-Star algorithm to autonomously locate water bottles, optimizing search path with spiral plotting</li>
+                  <li>Develop a 2D vector path planning algorithm for the rover to traverse through the gate properly which received 96/100 at the University Robotics Competition</li>
+                  <li>Author technical reports for wiki documentation for the team’s reference and future competitions</li>
+                </ul>
               </p>
 
             </li>
@@ -616,9 +636,11 @@
               <span>2022 — Present</span>
               <h5 class="h5 timeline-item-sub-title"> TEC E-board Member (May 23' - Present) </h5>
               <p class="timeline-text">
-                - Work with high school teams to create a national competition for Science Olympiad <br>
-                - Evaluate tests for competitions to ensure high quality questions and tests <br>
-                - Cooperate with other E-board members with logistics of tournaments held at the U-M <br>
+                <ul class="courses">
+                  <li>Work with high school teams to create a national competition for Science Olympiad</li>
+                  <li>Evaluate tests for competitions to ensure high quality questions and tests</li>
+                  <li>Cooperate with other E-board members with logistics of tournaments held at the U-M</li>
+                </ul>
               </p>
 
             </li>
@@ -671,7 +693,7 @@
               <span>Apr. 2023 - Present</span>
 
               <p class="timeline-text">
-                The University of Michigan College of Engineering Dean's List recognizes students who have achieved a grade point average
+                The University of Michigan College of Engineering Dean's List recognizes students who have achieved a grade point average of 3.5 or higher. 
               </p>
 
             </li>
