--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Prabhleen Pawar">Prabhleen Pawar</h1>
+          <h1 class="name" title="Welcome to Prabhleen Pawar's Portfolio">Prabhleen Pawar</h1>
 
           <p class="title">Software Developer</p>
         </div>
