Changed bio to include specific skills

--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@
         <section class="about-text">
           <p>
             I am a Junior enrolled at the University of Michigan in the College of Engineering,
-            majoring in Computer Science and minoring in Statistics. 
+            majoring in Computer Science and minoring in Statistics. I am currently focused on API integration and backend development and using Python, JS, and React to create 
+            websites and apps for various sectors (Automotive, Robotics, and Finance). 
           </p>
 
           <p>
-            My job is to develop software that makes people lives easier and safer. I hope 
-            to work with organizations that take on meaningful projects that put people first! Some of the industries 
-            that I am interested in with my project experience are automotive, robotics, finance and autonmous sections.  
+            My goal is to develop software that makes people lives easier and safer. I hope 
+            to work with organizations that take on meaningful projects that put people first!
           </p>
         </section>
 
