--- a/index.html
+++ b/index.html
@@ -504,7 +504,9 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Research Assistant @ U-M BIRDS Lab </h4>
+              <a href="#birds-ant-project">
+                <h4 class="h4 timeline-item-title">Research Assistant @ U-M BIRDS Lab</h4>
+              </a>
 
               <span>2023 — 2024</span>
 
@@ -955,7 +957,7 @@
               </div>
             </li>
 
-            <li class="project-item active" data-filter-item data-category="robots and auton">
+            <li class="project-item active" data-filter-item data-category="robots and auton" id="birds-ant-project">
               <div class="project-card">
                 <a href="https://www.birds.eecs.umich.edu">
                   <figure class="project-img">
