Added the job information

--- a/index.html
+++ b/index.html
@@ -526,6 +526,38 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">Avionics Software Engineer @ Blue Origin</h4>
+
+              <span>May 2024 — Aug. 2024</span>
+
+              <p class="timeline-text">
+                <ul class="courses">
+                  <li>Developed a mission-critical aerospace startup sequence application managing navigation and flight software</li>
+                  <li>Engineered a Python CLI tool for app manifest generation and validation, orchestrating startup launch sequence procedures</li>
+                  <li>Implemented a C-based component for real-time verification and execution of the application flight software</li>
+                </ul>                   
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Machine Learning Engineer @ Trinity Health</h4>
+
+              <span>Jan 2025 — Dec. 2025</span>
+
+              <p class="timeline-text">
+                <ul class="courses">
+                  <li>Led an exploratory AI initiative with Power BI to reduce billing errors, researching the impact of incorrect billing</li>
+                  <li>Developed initial data filtering processes for patient records, optimizing data extraction for deep learning billing analysis</li>
+                  <li>Researched and evaluated machine learning algorithms to identify optimal solutions for billing data and resource constraints</li>
+                </ul>                   
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">Software Engineer @ General Motors</h4>
 
               <span>May 2024 — Aug. 2024</span>
